{
    "name": "RPGInputActions",
    "maps": [
        {
            "name": "RPGCharacter",
            "id": "3ead366c-a6b7-44d2-8381-0a0b951f5df8",
            "actions": [
                {
                    "name": "AttackL",
                    "type": "Button",
                    "id": "12f351ba-2710-419f-bda3-bf2abf737ff4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AttackR",
                    "type": "Button",
                    "id": "01a71673-bab7-492e-8129-87f3109d7a58",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Block",
                    "type": "Value",
                    "id": "f6a094d5-bf2c-432a-be73-f32274a37dbd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CastL",
                    "type": "Button",
                    "id": "8adf7ca3-6cd8-41b2-b282-20a4241f0a00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CastR",
                    "type": "Button",
                    "id": "5dff7773-c15e-405f-beac-d8ef7acba2f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Death",
                    "type": "Button",
                    "id": "8fbfea2e-d59e-48dc-ae84-73e9c0d479f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Face",
                    "type": "Button",
                    "id": "787a80ae-a794-4ad0-8aad-2e110194e427",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Facing",
                    "type": "Value",
                    "id": "dd5a4ce2-a4d1-4d8a-bee7-3759c067ffd6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5679467b-966e-49db-b5a9-aa9e28fc90d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LightHit",
                    "type": "Button",
                    "id": "c6381ffb-3d89-4857-b599-53b47c05849c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "43308ce0-cc64-42b2-a9dd-3295b6ef9f15",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Relax",
                    "type": "Button",
                    "id": "2636d27b-b1c1-4d92-a1e9-29c6e7207dcd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "9b8a647f-12ad-455b-bc4e-d14bc34f084e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shield",
                    "type": "Button",
                    "id": "772f991d-0937-4372-b419-8d5bebd81c90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "aafb5408-6a4f-4fd7-a596-caf6387fc87e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WeaponDown",
                    "type": "Button",
                    "id": "ebe77173-3d6b-449e-9552-b29a4d28a382",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WeaponLeft",
                    "type": "Button",
                    "id": "24b09064-1bea-48ae-b9bd-5f4b46615fff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WeaponRight",
                    "type": "Button",
                    "id": "962e1d87-138c-4796-a086-8fce83fa0bd9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WeaponUp",
                    "type": "Button",
                    "id": "ae0d5111-b008-4443-8ac0-8b971ad35b20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleHeadLook",
                    "type": "Button",
                    "id": "f9135b14-6916-42a3-ba7f-2639bdbbb5ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleInjury",
                    "type": "Button",
                    "id": "b1e62319-76f6-4c75-bb73-b4d3c22be002",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TogglePause",
                    "type": "Button",
                    "id": "8528269b-f08a-4bd4-bf6f-2da3be0766cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleSlowTime",
                    "type": "Button",
                    "id": "785691c1-ec9a-4a36-837b-40c8d79a418e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bbdbdafb-66ad-4206-9f76-c60d53269a1b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone(min=0.2,max=0.925)",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "2e85cef7-c1cb-4b22-8597-350bec0aa14d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2120b965-d816-4b44-838a-869511df56c4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "826155c0-f5d3-45d0-a964-1cd39e4de24d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "57c3d98e-ba54-40a2-87d3-9640624cf46d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ded9887c-d549-4d24-8f18-e42ff97d6611",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3a2bc915-4b04-443e-b134-8620b71cf761",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WeaponUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cff3abbd-e163-4163-8ebb-7e52d1508789",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da68dbb3-b1e4-446a-97bc-e0cc755186a6",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49d9ee54-833f-4704-9579-a66ccde8c535",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "AttackL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0acae91-204f-447c-9ff5-24d26ff3cee5",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "AttackR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d79770ca-5c77-4b53-ac33-9712a4cb8ee2",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36a9d2d3-deaf-44e5-8805-5f4731241e0a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press(pressPoint=0.5)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "CastL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a37556aa-5777-4ec8-90d9-f60c3cf4fd79",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press(pressPoint=0.5)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "CastR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63104a7a-9566-435a-be44-cab8f87e4ab2",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Face",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "444d5689-a373-4ff8-bc62-5a0435ff4833",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false),StickDeadzone(min=0.125,max=0.925)",
                    "groups": "Gamepad",
                    "action": "Facing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9417228-53a0-4d27-8d6d-d45b933fcd4e",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Death",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f11c46ab-cc0b-4bff-8583-9afa124803f9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e97cf5e-f636-4a8f-a9e5-e9ab48dbcc74",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb2ae42d-7bed-49d3-ada1-dbaffc27b8db",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "LightHit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4e1256c-f3fd-429f-8acc-9f64168387b9",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Relax",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c1b111f-b14e-4638-95be-9154e3b9b55e",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad;Mouse and Keyboard",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3aa7fd1-d5e7-4831-85f5-44c89177fd99",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Shield",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19863b85-850a-4781-b0d8-846d0261c5e1",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WeaponDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccc96395-0f4e-4f20-a2b3-fae393c3f49c",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WeaponLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3ad3153-4b02-4253-90e4-12525fdb642f",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WeaponRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "796f2509-5ecb-459f-9aa7-2b2b7702bfc2",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard;Gamepad",
                    "action": "ToggleInjury",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41f6bee9-72d1-4907-9362-babb5d7c9e2e",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard;Gamepad",
                    "action": "ToggleHeadLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72c1b996-8e5f-4c72-93df-bb627233eac8",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard;Gamepad",
                    "action": "TogglePause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "925ab671-c791-47e9-a96c-79673016485e",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard;Gamepad",
                    "action": "ToggleSlowTime",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": []
        },
        {
            "name": "Mouse and Keyboard",
            "bindingGroup": "Mouse and Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}